[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/sprites/items/card_drops/card_drop.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/character_art/player/shadow.png" type="Texture" id=2]
[ext_resource path="res://src/compositional_objects/hurtbox/hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/compositional_objects/player_detector/player_detector.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/items/card_drop/card_drop.gd" type="Script" id=5]
[ext_resource path="res://assets/themes/default_theme/default_theme.tres" type="Theme" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[sub_resource type="CircleShape2D" id=3]
radius = 24.0

[sub_resource type="Animation" id=4]
resource_name = "name_reveal"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("CardName:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CardName:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Vector2( -28, -8 ), Vector2( -28, -32 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PickupPrompt:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PickupPrompt:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Vector2( -24, -8 ), Vector2( -24, -24 ) ]
}

[node name="CardDrop" type="KinematicBody2D"]
collision_layer = 2048
collision_mask = 4
script = ExtResource( 5 )

[node name="Shadow" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 0, 2.5 )
scale = Vector2( 1.2, 2 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 64
collision_mask = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="PlayerDetector" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="PlayerDetector" index="0"]
shape = SubResource( 3 )

[node name="CardName" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -28.0
margin_top = -8.0
margin_right = 30.0
margin_bottom = 11.0
theme = ExtResource( 6 )
text = "card name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PickupPrompt" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -24.0
margin_top = -8.0
margin_right = 25.0
margin_bottom = 11.0
theme = ExtResource( 6 )
text = "Pickup: E"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/name_reveal = SubResource( 4 )

[editable path="Hurtbox"]

[editable path="PlayerDetector"]
